feat: Complete repository restructure and content addition
- Add comprehensive course catalog and structure
- Implement GitHub Pages with Jekyll
- Add community guidelines and contribution process
- Create sample course content and projects
- Add automation with GitHub Actions
- Implement modern styling and responsive design
- Add comprehensive documentation
- Set up development environment with requirements

This establishes GenAI Coach as a professional AI education platform
following 'People before algorithms' philosophy.

--- a/.gitattributes
+++ b/.gitattributes
@@ -64,3 +64,21 @@
 *.npy filter=lfs diff=lfs merge=lfs -text
 *.npz filter=lfs diff=lfs merge=lfs -text
 *.mat filter=lfs diff=lfs merge=lfs -text
+# Documentation
+*.md text
+*.txt text
+*.yml text
+*.yaml text
+
+# Web assets
+*.html text
+*.css text
+*.js text
+*.json text
+
+# Images (if not already covered)
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.svg text
